# Multi-document-vectorless-RAG-system

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  agents.py  graph.py  ingest.py  main.py  pyproject.toml  requirements.txt  retriever.py
backend/chromadb/: chroma.sqlite3
backend/services/: document_service.py  message_service.py  rag_service.py  user_service.py
backend/utils/: pageindex_retriever.py  psycopg.py  retriever.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: Chat.tsx  globals.css  layout.tsx  page.tsx
frontend/app/api/: api.ts
frontend/app/components/: Aside.tsx  Chats.tsx  Document.tsx  Home.tsx  Signin.tsx
frontend/app/main/: layout.tsx  page.tsx
frontend/app/main/chat/: page.tsx
frontend/app/main/documents/: page.tsx
frontend/app/zustand/stores/: ComponentStore.ts  DocumentStore.ts
