[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "pypdf>=6.12.1",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]