[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "pypdf>=6.12.1",
    "sentence-transformers>=5.5.1",
    "unstructured[pdf]>=0.22.31",
    "unstructured-client>=0.44.0",
    "uvicorn>=0.48.0",
    "python-magic>=0.4.27",
    "langchain-chroma>=1.1.0",
    "unstructured-inference>=1.6.11",
    "langchain-community>=0.4.2",
    "langchain-unstructured>=1.0.1",
    "pageindex>=0.2.8",
    "docling>=2.96.1",
    "bm25>=0.3.9",
    "clerk-backend-api>=6.0.1",
    "psycopg[binary]>=3.3.4",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
