[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "pypdf>=6.12.1",
    "uvicorn>=0.48.0",
    "python-magic>=0.4.27",
    "langchain-community>=0.4.2",
    "langchain-unstructured>=1.0.1",
    "pageindex>=0.2.8",
    "bm25>=0.3.9",
    "clerk-backend-api>=6.0.1",
    "psycopg[binary]>=3.3.4",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "svix>=1.96.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
